docs: change create-predefined-parameters-request-fn menu title

--- a/website/docs/codegen/CLI/create-predefined-parameters-request-fn.mdx
+++ b/website/docs/codegen/CLI/create-predefined-parameters-request-fn.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 10
-sidebar_label: --operation-predefined-parameters
+sidebar_label: Predefined operation parameters
 ---
 
 # Predefined operation parameters
