docs(website): add `--queryable-write-operations` tip to the `useQuery*` pages

--- a/website/docs/hooks/useIsFetching.mdx
+++ b/website/docs/hooks/useIsFetching.mdx
@@ -29,6 +29,12 @@ const queriesNumber = api.<service>.<operation>.useIsFetching(
 ### Returns
 `number`: The number of queries that are matching the provided filters.
 
+:::tip
+By default, `useIsFetching` hooks are only generated for read operations (_GET_ method). If you want to use query
+hooks for write operations (_POST_, _PUT_, _PATCH_ methods), use the `--queryable-write-operations` CLI option
+during code generation.
+:::
+
 ### Example
 
 ```tsx title="src/FetchStatus.tsx"
