--- a/website/docs/hooks/useInfiniteQuery.mdx
+++ b/website/docs/hooks/useInfiniteQuery.mdx
@@ -38,6 +38,12 @@ const query = api.<service>.<operation>.useInfiniteQuery(
 
 ### Examples
 
+:::tip
+By default, `useInfiniteQuery` hooks are only generated for read operations (_GET_ method). If you want to use query
+hooks for write operations (_POST_, _PUT_, _PATCH_ methods), use the `--queryable-write-operations` CLI option
+during code generation.
+:::
+
 <Tabs>
   <TabItem value="offset-based" label="Offset-based 🦌">
     ```tsx title="src/PostList.tsx"
