--- a/website/docs/hooks/useQueries.mdx
+++ b/website/docs/hooks/useQueries.mdx
@@ -29,6 +29,12 @@ const queries = api.<service>.<operation>.useQueries(
 ### Returns
 Array with all the `Queries`. The order returned is the same as the input order.
 
+:::tip
+By default, `useQueries` hooks are only generated for read operations (_GET_ method). If you want to use query
+hooks for write operations (_POST_, _PUT_, _PATCH_ methods), use the `--queryable-write-operations` CLI option
+during code generation.
+:::
+
 ### Example
 
 ```tsx
