--- a/website/docs/hooks/useSuspenseQueries.mdx
+++ b/website/docs/hooks/useSuspenseQueries.mdx
@@ -33,6 +33,12 @@ const result = api.<service>.<operation>.useSuspenseQueries(
 
 Array with all the query results. The order returned is the same as the input order.
 
+:::tip
+By default, `useSuspenseQueries` hooks are only generated for read operations (_GET_ method). If you want to use query
+hooks for write operations (_POST_, _PUT_, _PATCH_ methods), use the `--queryable-write-operations` CLI option
+during code generation.
+:::
+
 ### Example
 
 ```tsx title="src/Entities.tsx"
