docs(website): update overview page with the `--create-api-client-fn` option

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -17,7 +17,8 @@ custom hooks with strict typing.
 - **Type-safe API Requests:** Leverage TypeScript for type-safe API requests, minimizing runtime errors and enhancing
   developer experience.
 - **Modular Design:** Customize the library using callbacks to handle API calls according to your project's
-  specific requirements.
+  specific requirements. With the `--create-api-client-fn` option, create API clients that are as modular as you need -
+  from fully-featured to ultra-lightweight with explicitly included services and callbacks for optimal bundle size.
 - **Integration with [TanStack Query v5](https://tanstack.com/query/v5):** Seamless integration with _TanStack Query_
   for efficient server state management, caching, and data synchronization.
 - **Dynamic Proxy-Based Hooks:** Generate React Query hooks for your API endpoints automatically without manual
