docs(website): add `getMutationCache()` to the Overview

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -188,6 +188,7 @@ custom hooks with strict typing.
 - [x] [`resetQueries(...)`](/query-client/resetQueries.mdx)
 - [x] [`isFetching(...)`](/query-client/isFetching.mdx)
 - [x] [`isMutating(...)`](/query-client/isMutating.mdx)
+- [x] [`getMutationCache(...)`](/query-client/getMutationCache.mdx)
 
 ### Qraft Utility Functions
 
