--- a/website/docs/codegen/CLI/redocly-config.mdx
+++ b/website/docs/codegen/CLI/redocly-config.mdx
@@ -135,6 +135,14 @@ apis:
       # Transform operation names using regex
       operation-name-modifier:
         - '/files/list:[a-zA-Z]+List ==> findAll'  # Rename all *List operations to findAll
+      # Configure custom ParametersWrapper types for specific operations
+      use-parameters-wrapper:
+        'get /files/**':
+          type: 'ReadParametersWrapper'
+          import: '../../type-overrides/parameters-wrapper.js'
+        'delete /approval_policies/{approval_policy_id}':
+          type: 'WriteParametersWrapper'
+          import: '../../type-overrides/parameters-wrapper.js'
       # Override the type imports in the generated code with customs
       override-import-type:
         services:
