--- a/website/docs/codegen/CLI/redocly-config.mdx
+++ b/website/docs/codegen/CLI/redocly-config.mdx
@@ -136,7 +136,7 @@ apis:
       operation-name-modifier:
         - '/files/list:[a-zA-Z]+List ==> findAll'  # Rename all *List operations to findAll
       # Configure custom ParametersWrapper types for specific operations
-      use-parameters-wrapper:
+      operation-parameters-type:
         'get /files/**':
           type: 'ReadParametersWrapper'
           import: '../../type-overrides/parameters-wrapper.js'
