--- a/website/docs/codegen/CLI/cli.mdx
+++ b/website/docs/codegen/CLI/cli.mdx
@@ -186,10 +186,12 @@ It is possible to use multiple plugins at the same time. For example, `--plugin 
     - `<method> <path glob>` - Match operations by HTTP method and path pattern
     - `<path glob>` - Match operations by path pattern only (all methods)
     - Supports glob patterns (wildcards) for flexible matching
+    - Negative patterns: Use `!` prefix to exclude specific paths (e.g., `'/*,!/fields'` means all paths except `/fields`)
   - **Examples:**
     - `--operation-parameters-type-wrapper 'get /files/**' 'type:ReadParametersWrapper' 'import:../../type-overrides/parameters-wrapper.js'` - Use _ParametersWrapper_ for all GET operations under `/files/**`
     - `--operation-parameters-type-wrapper 'delete /approval_policies/{approval_policy_id}' 'type:DeleteParametersWrapper' 'import:../../type-overrides/parameters-wrapper.js'` - Use _ParametersWrapper_ for a specific DELETE operation
     - `--operation-parameters-type-wrapper 'post,put /api/**' 'type:WriteParametersWrapper' 'import:../types/write-parameters-wrapper.js'` - Use _WriteParametersWrapper_ for POST and PUT operations under `/api/**`
+    - `--operation-parameters-type-wrapper '/**,!/fields' 'type:ItemsQueryParametersWrapper' 'import:./types'` - Use _ItemsQueryParametersWrapper_ for all paths except `/fields`
   - This option is particularly useful when you need to provide custom parameter handling logic or transform parameters before they are used in API calls.
 - **`--create-api-client-fn <functionName> [options...]`:** Configure API client creation function. Allows specifying the function name used to create the API client, as well as fine-tuning included services and callbacks.
   You can specify this option **multiple times** to generate **several different API client** creation functions from a single OpenAPI document - for example,
