--- a/website/docs/codegen/CLI/openapi.mdx
+++ b/website/docs/codegen/CLI/openapi.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 2
-sidebar_label: OpenAPI CLI
+sidebar_label: OpenAPI
 ---
 
 import Tabs from '@theme/Tabs';
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 # OpenAPI mode (`qraft openapi`)
 
 `qraft openapi` is the OpenAPI-focused mode of the unified `@qraft/cli` package.
-It generates API schemas and interfaces for `@openapi-qraft/react` and keeps the existing OpenAPI generation flow fully compatible.
+It generates code from OpenAPI documents using OpenAPI plugins, including React services and TypeScript schema types.
 
 Qraft relies on types from the generation result of [`openapi-typescript`](https://www.npmjs.com/package/openapi-typescript) package,
 which is a powerful tool for generating types from an OpenAPI schema.
